// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="boxed-group onboarding-step is-open is-finished"
>
  <div
    className="onboarding-step-number"
  >
    1
  </div>
  <div
    className="boxed-group-header"
  >
    <h2>
      First Step
    </h2>
  </div>
  <div
    className=""
  >
    <div>
      form
    </div>
  </div>
</div>
`;

exports[`renders 2`] = `
<div
  className="boxed-group onboarding-step is-finished"
  onClick={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="onboarding-step-number"
  >
    1
  </div>
  <div>
    result
  </div>
  <div
    className="boxed-group-header"
  >
    <h2>
      First Step
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  />
  <div
    className="hidden"
  >
    <div>
      form
    </div>
  </div>
</div>
`;
